# starknet-spec-flattener

./: Cargo.toml
api_openrpc/0-original/: starknet_api_openrpc.json
api_openrpc/1-flatten/: starknet_api_openrpc.json
api_openrpc/1-flatten/methods/: starknet_blockHashAndNumber.json  starknet_blockNumber.json  starknet_call.json  starknet_chainId.json  starknet_estimateFee.json  starknet_estimateMessageFee.json  starknet_getBlockTransactionCount.json  starknet_getBlockWithTxHashes.json  starknet_getBlockWithTxs.json  starknet_getClass.json  starknet_getClassAt.json  starknet_getClassHashAt.json  starknet_getEvents.json  starknet_getNonce.json  starknet_getStateUpdate.json  starknet_getStorageAt.json  starknet_getTransactionByBlockIdAndIndex.json  starknet_getTransactionByHash.json  (+3 more)
api_openrpc/2-trimmed/: starknet_api_openrpc.json
api_openrpc/3-embedded-required/: starknet_api_openrpc.json
api_openrpc/4-merged-allOf/: starknet_api_openrpc.json
src/: README.md  all_of.rs  main.rs
trace_api_openrpc/0-original/: starknet_trace_api_openrpc.json
trace_api_openrpc/1-flatten/: starknet_trace_api_openrpc.json
trace_api_openrpc/2-trimmed/: starknet_trace_api_openrpc.json
trace_api_openrpc/3-embedded-required/: starknet_trace_api_openrpc.json
trace_api_openrpc/4-merged-allOf/: starknet_trace_api_openrpc.json
write_api/0-original/: starknet_write_api.json
write_api/1-flatten/: starknet_write_api.json
write_api/2-trimmed/: starknet_write_api.json
write_api/3-embedded-required/: starknet_write_api.json
write_api/4-merged-allOf/: starknet_write_api.json
(+71 files in other folders)
