[package]
name = "spec-flattener"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# TODO Trim features
[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "raw_value",
] }