[package]
name = "spec-flattener"
version = "0.1.0"
edition = "2021"

# TODO Trim features
[dependencies]
anyhow = "1.0"
reqwest = "0.11"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "raw_value",
] }